# jc3DTest

./: .gitignore  CMakeLists.txt  README.md  project_structure.txt  vcpkg.json
libs/jcFluidSim/: CMakeLists.txt
libs/jcFluidSim/include/jcFluidSim/: Field.h  FluidSolver.h
libs/jcFluidSim/src/: FluidSolver.cpp
libs/jcGLframework/: CMakeLists.txt
libs/jcGLframework/include/jcGLframework/: Bitmap.h  GLFWApp.h  GLFramebuffer.h  GLMesh.h  GLMeshIndirect.h  GLOcclusionQuery.h  GLPrimitivesQuery.h  GLSceneData.h  GLSceneDataLazy.h  GLShader.h  GLSkyboxRenderer.h  GLTexture.h  GLTimerQuery.h  LineCanvasGL.h  UtilsCubemap.h  UtilsGLImGui.h  debug.h  jcGLframework.h
libs/jcGLframework/include/jcGLframework/glFramework/: GLMesh.h  GLTexture.h  UtilsGLImGui.h
libs/jcGLframework/include/jcGLframework/scene/: Material.h  MergeUtil.h  VtxData.h
libs/jcGLframework/src/: GLOcclusionQuery.cpp  GLPrimitivesQuery.cpp  GLSceneData.cpp  GLSceneDataLazy.cpp  GLShader.cpp  GLTexture.cpp  GLTimerQuery.cpp  Utils.cpp  UtilsCubemap.cpp
libs/jcGLframework/src/glFramework/: GLShader.cpp  GLTexture.cpp
libs/jcGLframework/src/scene/: Material.cpp  MergeUtil.cpp  Scene.cpp  VtxData.cpp
src/apps/jc3DCh02_Assimp/: CMakeLists.txt
src/apps/jc3DCh02_Assimp/src/: main.cpp
src/apps/jc3DCh02_ETC2Comp/: CMakeLists.txt
src/apps/jc3DCh02_ETC2Comp/src/: main.cpp
src/apps/jc3DCh02_EasyProfiler/: CMakeLists.txt
src/apps/jc3DCh02_EasyProfiler/src/: main.cpp
src/apps/jc3DCh02_ImGui/: CMakeLists.txt
src/apps/jc3DCh02_ImGui/src/: main.cpp
src/apps/jc3DCh02_MeshOptimizer/: CMakeLists.txt
src/apps/jc3DCh02_MeshOptimizer/src/: main.cpp
src/apps/jc3DCh02_Optick/: CMakeLists.txt
src/apps/jc3DCh02_Optick/src/: main.cpp
src/apps/jc3DCh02_STB/: CMakeLists.txt
src/apps/jc3DCh02_STB/src/: main.cpp
src/apps/jc3DCh02_Taskflow/: CMakeLists.txt
src/apps/jc3DCh02_Taskflow/src/: main.cpp
src/apps/jc3DCh02_ex03/: CMakeLists.txt
src/apps/jc3DCh02_ex04/: CMakeLists.txt
src/apps/jc3DCh02_ex07/: CMakeLists.txt
src/apps/jc3DCh02_ex07/src/: main.cpp
src/apps/jc3DCh03_GL01ApiWrapping/: CMakeLists.txt
src/apps/jc3DCh03_GL01ApiWrapping/src/: GL.h  GLAPITrace.cpp  GetGLAPI.py  main.cpp
src/apps/jc3DCh03_GL02VtxPulling/: CMakeLists.txt
src/apps/jc3DCh03_GL02VtxPulling/src/: GLShader.h  debug.h  main.cpp
src/apps/jc3DCh03_GL03CubeMap/: CMakeLists.txt
src/apps/jc3DCh03_GL03CubeMap/src/: GLShader.cpp  Utils.h  main.cpp
src/apps/jc3DCh03_VK01_GLSLang/: CMakeLists.txt
src/apps/jc3DCh03_VK01_GLSLang/src/: UtilsVulkan.cpp  UtilsVulkan.h  main.cpp
src/apps/jc3DCh03_VK02_DemoApp/: CMakeLists.txt
src/apps/jc3DCh03_VK02_DemoApp/src/: UtilsVulkan.cpp  UtilsVulkan.h  main.cpp
src/apps/jc3DCh04_GL01_Camera/: CMakeLists.txt
src/apps/jc3DCh04_GL01_Camera/src/: Camera.h  GLShader.cpp  main.cpp
src/apps/jc3DCh04_GL02_FPS/: CMakeLists.txt
src/apps/jc3DCh04_GL02_FPS/src/: Camera.h  UtilsCubemap.cpp  main.cpp
src/apps/jc3DCh04_VK01_DemoApp/: CMakeLists.txt
src/apps/jc3DCh04_VK01_DemoApp/src/: Camera.h  EasyProfilerWrapper.h  Graph.h  ResourceString.h  UtilsVulkan.cpp  UtilsVulkan.h  main.cpp
src/apps/jc3DCh04_VK01_DemoApp/src/vkRenderers/: VulkanCanvas.cpp  VulkanCanvas.h  VulkanClear.cpp  VulkanCube.cpp  VulkanCube.h  VulkanFinish.cpp  VulkanImGui.cpp  VulkanImGui.h  VulkanModelRenderer.cpp  VulkanModelRenderer.h  VulkanRendererBase.h
src/apps/jc3DCh05_GL02_Tessellation/: CMakeLists.txt
src/apps/jc3DCh05_GL02_Tessellation/src/: UtilsMath.h  main.cpp
src/apps/jc3DCh05_GL03_MeshRenderer/: CMakeLists.txt
src/apps/jc3DCh05_GL03_MeshRenderer/src/: VtxData.h  main.cpp
src/apps/jc3DCh06_GL01_PBR/: CMakeLists.txt
src/apps/jc3DCh06_GL01_PBR/src/: main.cpp
src/apps/jc3DCh06_VK01_BRDF_LUT/: CMakeLists.txt
src/apps/jc3DCh06_VK01_BRDF_LUT/src/: main.cpp
src/apps/jc3DCh06_VK02_DescriptorIndexing/: CMakeLists.txt
src/apps/jc3DCh06_VK02_DescriptorIndexing/src/: main.cpp
src/apps/jc3DCh06_VK02_DescriptorIndexing/src/vkRenderers/: VulkanFinish.h  VulkanRendererBase.cpp
src/apps/jc3DCh06_VK03_ComputeTexture/: CMakeLists.txt
src/apps/jc3DCh06_VK03_ComputeTexture/src/: EasyProfilerWrapper.h  Utils.h  main.cpp
src/apps/jc3DCh06_VK04_ComputeMesh/: CMakeLists.txt
src/apps/jc3DCh06_VK04_ComputeMesh/src/: ResourceString.h  main.cpp
src/apps/jc3DCh06_VK04_ComputeMesh/src/vkRenderers/: VulkanClear.h
src/libs/: CMakeLists.txt
src/libs/include/jc3DTestSharedLibs/: Camera.h  Graph.h  UtilsCubemap.h  UtilsVulkan.h
src/libs/include/jc3DTestSharedLibs/glFramework/: GLFWApp.h  GLSceneData.h  GLSceneDataLazy.h  GLTexture.h  LineCanvasGL.h  UtilsGLImGui.h
src/libs/include/jc3DTestSharedLibs/scene/: Cameras.h  Material.h  MergeUtil.h  VtxData.h
src/libs/include/jc3DTestSharedLibs/vkFramework/: Barriers.h  CompositeRenderer.h  CubeRenderer.h  GuiRenderer.h  InfinitePlaneRenderer.h  LineCanvas.h  MultiRenderer.h  QuadRenderer.h  VulkanApp.h  VulkanResources.h  VulkanShaderProcessor.h
src/libs/include/jc3DTestSharedLibs/vkRenderers/: VulkanCanvas.h  VulkanClear.h  VulkanComputeBase.h  VulkanComputedImage.h  VulkanComputedItem.h  VulkanComputedVB.h  VulkanCube.h  VulkanFinish.h  VulkanImGui.h  VulkanModelRenderer.h  VulkanMultiMeshRenderer.h  VulkanPBRModelRenderer.h  VulkanQuadRenderer.h  VulkanRendererBase.h  VulkanSingleQuad.h
src/libs/include/jcVkFramework/: UtilsCubemap.h
src/libs/include/jcVkFramework/vkFramework/: VulkanApp.h
src/libs/include/jcVkFramework/vkRenderers/: VulkanQuadRenderer.h
src/libs/src/jc3DTestSharedLibs/: Utils.cpp  UtilsCubemap.cpp  UtilsVulkan.cpp  imgui_wrapper.cpp
src/libs/src/jc3DTestSharedLibs/glFramework/: GLSceneData.cpp  GLSceneDataLazy.cpp  GLShader.cpp  GLTexture.cpp
src/libs/src/jc3DTestSharedLibs/scene/: Material.cpp  MergeUtil.cpp  Scene.cpp  VtxData.cpp
src/libs/src/jc3DTestSharedLibs/vkFramework/: CubeRenderer.cpp  GuiRenderer.cpp  InfinitePlaneRenderer.cpp  LineCanvas.cpp  MultiRenderer.cpp  QuadRenderer.cpp  VulkanApp.cpp  VulkanResources.cpp  VulkanShaderProcessor.cpp
src/libs/src/jcVkFramework/: CMakeLists.txt
(+387 files in other folders)
